# comfyui-open-webui

./: CHANGE_LOG.md  ComfyuiOpenWebui.py  README.md  __init__.py  pyproject.toml
web/js/: OllamaNode.js  OpenwebuiNode.js
