[project]
name = "comfyui-openwebui"
description = "Custom ComfyUI Nodes for interacting with [a/OpenWebUI](https://openwebui.com/).\nIntegrate the power of LLMs into ComfyUI workflows easily."
version = "0.0.1"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/morgan55555/comfyui-open-webui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "morgan55555"
DisplayName = "comfyui-open-webui"
Icon = ""
